[package]
name = "lmstfy-client"
version = "0.1.0"
authors = ["hsiung <vjoke@foxmail.com>"]
edition = "2018"
description = "A rust client for lmstfy server"
homepage = "https://github.com/vjoke/lmstfy-client.git"
repository = "https://github.com/vjoke/lmstfy-client.git"
documentation = "https://docs.rs/lmstfy-client"
license-file = "LICENSE.txt"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.102", features = ["derive"] }